--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,12 @@ repositories {
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
     // See https://docs.gradle.org/current/userguide/declaring_repositories.html
     // for more information about repositories.
+    maven {
+        url "https://api.modrinth.com/maven"
+        content {
+            includeGroup "maven.modrinth"
+        }
+    }
 }
 
 dependencies {
@@ -27,6 +33,8 @@ dependencies {
     implementation include('net.auoeke:result:0.4.1')
     implementation include('net.auoeke:unsafe:1.7.3')
     implementation include('net.auoeke:reflect:6.1.3')
+
+    modLocalRuntime "maven.modrinth:lazydfu:0.1.3"
 }
 
 processResources {
